# AutoGPUMD

./: .gitignore  AGENTS.md  README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
agent/: mcp_skills.md  tools.yaml
agent/prompts/: debug_gpumd_error.md  plan_simulation.md  write_report.md
autogpumd/: __init__.py  analysis.py  cli.py  config.py  import_examples.py  metadata.py  mock.py  nep_analysis.py  plotting.py  report.py  runner.py  structure.py  templates.py
configs/: al_nvt.yaml  al_nvt_real.yaml
examples/a800_nep4_real/: README.md  source.md  summary.json
examples/a800_nep4_real/ionic_1000K/: run.in
examples/a800_nep4_real/li3ps4_codecheck/: run.in
examples/al_nvt_mock/: README.md  metadata.yaml  report.md
examples/al_nvt_real/: README.md
examples/pbte_nep_real/: README.md  metadata.yaml  report.md  source.md
examples/si_diffusion_real/: README.md  metadata.yaml  report.md  source.md
examples/tutorial_32_doas_aedp/: README.md  local_run_summary.json  source.md  summary.json
notebooks/: al_nvt_demo.ipynb
scripts/: plot_a800_nep4_results.py  plot_doas_aedp_tutorial.py  run_tutorial_32_doas_aedp.py  submit_gpumd.slurm
tests/: test_analysis.py  test_config.py  test_import_examples.py  test_metadata.py  test_nep_analysis.py  test_report.py  test_repository_assets.py  test_runner_mock.py  test_script_dependencies.py  test_structure.py
tutorials/00_gpumd_minimal/: README.md
tutorials/01_existing_nep_md/: README.md
tutorials/02_nep_training_mini/: README.md
(+4 files in other folders)
